--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -18,7 +18,7 @@
     "- Input Embedding: Some vector embedding of each word.\n",
     "- Positional Encoding: Encoding of each word with respect to the position of the word in a sentence.\n",
     "- Input Embedding and Positional Encoding forms the Input to the Encoder Block.\n",
-    "- Multi-Head Attention: Every single word has 3 vectors: Q, K and V. More explanation below. \"Multi\" because we can stack the results of on top of each other to get multi-attention. \n",
+    "- Multi-Head Attention: Every single word has 3 vectors: Q, K and V. More explanation below. \"Multi\" because we can stack the results on top of each other to get multi-attention. \n",
     "    - Q = What I am looking for [sequence length x d<sub>k</sub>].\n",
     "    - K = What I can offer [sequence length x d<sub>k</sub>]\n",
     "    - V: What I actually offer [sequence length x d<sub>v</sub>]\n",
