--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The tranformer architecture\n",
+    "# The transformer architecture\n",
     "\n",
     "The transformer architecture describes an Encoder (left) and Decoder (right).\n",
     "\n",
